--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h2>heading 2</h2>
     <h3>heading 3</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, unde. Quo libero, accusamus recusandae at eaque assumenda soluta nesciunt in illo labore aliquam rem veritatis quod perspiciatis incidunt quas nostrum?</p>
+    <a href="#" class="link-arrow">LEARN MORE</a>
 </body>
 </html>
