--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <h3>heading 3</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, unde. Quo libero, accusamus recusandae at eaque assumenda soluta nesciunt in illo labore aliquam rem veritatis quod perspiciatis incidunt quas nostrum?</p>
     <a href="#" class="link-arrow">LEARN MORE</a>
+    <span class="badge badge--primary badge--small">10% off</span>
 </body>
 </html>
