--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, unde. Quo libero, accusamus recusandae at eaque assumenda soluta nesciunt in illo labore aliquam rem veritatis quod perspiciatis incidunt quas nostrum?</p>
     <a href="#" class="link-arrow">LEARN MORE</a>
     <span class="badge badge--primary badge--small">10% off</span>
+    <ul class="list list--tick">
+        <li class="list__items">Itrm 1</li>
+        <li class="list__items">Itrm 2</li>
+        <li class="list__items">Itrm 3</li>
+    </ul>
 </body>
 </html>
