--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
         <li class="list__items">Itrm 2</li>
         <li class="list__items">Itrm 3</li>
     </ul>
+<span class="icon-container">
+    <svg class="icon icon--primary">
+        <use xlink:href="/images/sprite.svg#clock"></use>
+        </svg>
+</span>  
 </body>
 </html>
